fixed on mobile

--- a/src/styles/sass/admin/user.scss
+++ b/src/styles/sass/admin/user.scss
@@ -255,7 +255,7 @@
       .#{$identifier}-user {
         &-amount {
           font-size: small;
-          padding: 4px 10px 4px 36px;
+          padding: 6px 10px 6px 36px;
           width: 100%;
           overflow-x: auto;
         }
